--- a/api/pom.xml
+++ b/api/pom.xml
@@ -30,6 +30,19 @@
 
   <artifactId>inventory-api</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.10.19</version>
+    </dependency>
+  </dependencies>
   <build>
     <finalName>hawkular-inventory-api</finalName>
   </build>
