This requires the blueprints-sql-graph built from https://github.com/metlos/blueprints-sql-graph @ at least this commit: af3df03f72aefef0a72195d61eea7fb7ea970ac5
To run Hawkular with this backend you need to:
1) delete the titan provider jar from inventory-dist.war/WEB-INF/lib
   in nest
2) copy this provider in its place along with blueprints-sql-graph jar
   built from the above sources and postgresql driver jar (version
   9.4.1207)

--- a/hawkular-inventory-impl-tinkerpop-parent/pom.xml
+++ b/hawkular-inventory-impl-tinkerpop-parent/pom.xml
@@ -36,6 +36,7 @@
     <module>hawkular-inventory-impl-tinkerpop-spi</module>
     <module>hawkular-inventory-impl-tinkerpop-tinkergraph-provider</module>
     <module>hawkular-inventory-impl-tinkerpop-titan-provider</module>
+    <module>hawkular-inventory-impl-tinkerpop-sql-provider</module>
   </modules>
 
   <scm>
