--- a/hawkular-inventory-dist/src/main/resources/titan/hawkular-inventory.properties
+++ b/hawkular-inventory-dist/src/main/resources/titan/hawkular-inventory.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2015 Red Hat, Inc. and/or its affiliates
+# Copyright 2015-2016 Red Hat, Inc. and/or its affiliates
 # and other contributors as indicated by the @author tags.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,6 +14,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+hawkular.inventory.tinkerpop.graph-provider-impl=org.hawkular.inventory.impl.tinkerpop.provider.TitanProvider
 
 # titan related properties
 # see this documentation for more options http://s3.thinkaurelius.com/docs/titan/0.5.4/titan-config-ref.html
