--- a/hawkular-inventory-dist/src/main/resources/sql/hawkular-inventory.properties
+++ b/hawkular-inventory-dist/src/main/resources/sql/hawkular-inventory.properties
@@ -15,6 +15,9 @@
 # limitations under the License.
 #
 
-sql.datasource.user=hawkular
-sql.datasource.password=hawkular
-sql.datasource.host=localhost
+hawkular.inventory.tinkerpop.graph-provider-impl=org.hawkular.inventory.impl.tinkerpop.sql.SqlGraphProvider
+
+sql.datasource.jndi=java:/jboss/datasources/HawkularInventoryDS
+
+#the connections are pooled, so we should be nice and return them to the pool once we're done with them
+sql.closeConnectionOnTransactionEnd=true
