--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/pom.xml
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/pom.xml
@@ -27,7 +27,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>hawkular-inventory-impl-tinkerpop-postgresql-provider</artifactId>
+  <artifactId>hawkular-inventory-impl-tinkerpop-sql-provider</artifactId>
   <version>0.13.0.Final-SNAPSHOT</version>
 
   <dependencies>
@@ -41,12 +41,6 @@
       <groupId>org.hawkular.inventory</groupId>
       <artifactId>hawkular-inventory-impl-tinkerpop-spi</artifactId>
       <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.4.1207.jre7</version>
     </dependency>
 
     <dependency>
@@ -103,6 +97,13 @@
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>javax.mail-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.3.173</version> <!-- in sync with WF10 -->
       <scope>test</scope>
     </dependency>
   </dependencies>
