--- a/hawkular-inventory-dist/pom.xml
+++ b/hawkular-inventory-dist/pom.xml
@@ -49,11 +49,13 @@
       <artifactId>jackson-databind</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
@@ -92,187 +94,11 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- These 3 are to be included in Hawkular - We're using Titan on Cassandra there -->
-    <dependency>
-      <groupId>org.hawkular.inventory</groupId>
-      <artifactId>hawkular-inventory-impl-tinkerpop-titan-provider</artifactId>
-      <version>${project.version}</version>
-      <scope>runtime</scope>
-      <exclusions>
-        <exclusion>
-          <artifactId>commons-codec</artifactId>
-          <groupId>commons-codec</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>slf4j-api</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>slf4j-log4j12</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-lang</artifactId>
-          <groupId>commons-lang</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>log4j</artifactId>
-          <groupId>log4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-beanutils-core</artifactId>
-          <groupId>commons-beanutils</groupId><!-- provided by commons-beanutils since 1.9.x -->
-        </exclusion>
-      </exclusions>
-    </dependency>
-
     <dependency>
       <groupId>org.hawkular.inventory</groupId>
       <artifactId>hawkular-inventory-impl-tinkerpop</artifactId>
       <version>${project.version}</version>
       <scope>runtime</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.thinkaurelius.titan</groupId>
-      <artifactId>titan-cassandra</artifactId>
-      <version>${version.com.thinkaurelius.titan}</version>
-      <scope>runtime</scope>
-      <exclusions>
-        <exclusion>
-          <!-- We get a newer version from Cassandra -->
-          <groupId>org.jboss.netty</groupId>
-          <artifactId>netty</artifactId>
-        </exclusion>
-        <exclusion>
-          <!-- we use our own -->
-          <groupId>org.apache.cassandra</groupId>
-          <artifactId>cassandra-all</artifactId>
-        </exclusion>
-        <exclusion>
-          <!-- we use our own -->
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-        </exclusion>
-        <exclusion>
-          <!-- TODO HACK ALERT: We're coupling pinger here... -->
-          <!-- We need to depend on another version that is also used in Pinger. This should disappear once pinger
-          becomes a proper remote client of inventory. -->
-          <groupId>org.apache.httpcomponents</groupId>
-          <artifactId>httpclient</artifactId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-codec</artifactId>
-          <groupId>commons-codec</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>slf4j-api</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-lang</artifactId>
-          <groupId>commons-lang</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <scope>provided</scope><!-- there is a WF module -->
-    </dependency>
-
-    <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <scope>provided</scope><!-- there is a WF module -->
-    </dependency>
-
-    <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-      <scope>provided</scope><!-- there is a WF module -->
-    </dependency>
-
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <scope>provided</scope><!-- there is a WF module -->
-    </dependency>
-
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <scope>provided</scope><!-- there is a WF module -->
-    </dependency>
-
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <scope>provided</scope><!-- there is a WF module -->
-    </dependency>
-
-    <dependency>
-      <groupId>commons-pool</groupId>
-      <artifactId>commons-pool</artifactId>
-      <scope>provided</scope><!-- there is a WF module -->
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.cassandra</groupId>
-      <artifactId>cassandra-all</artifactId>
-      <exclusions>
-        <exclusion>
-          <!-- we use our own -->
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-        </exclusion>
-
-        <exclusion>
-          <groupId>org.antlr</groupId>
-          <artifactId>antlr</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.antlr</groupId>
-          <artifactId>antlr-runtime</artifactId>
-        </exclusion>
-
-        <!-- loaded via WF module -->
-        <exclusion>
-          <artifactId>commons-cli</artifactId>
-          <groupId>commons-cli</groupId>
-        </exclusion>
-
-        <!-- loaded via WF module -->
-        <exclusion>
-          <artifactId>commons-codec</artifactId>
-          <groupId>commons-codec</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>slf4j-api</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>log4j-over-slf4j</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>jcl-over-slf4j</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-lang3</artifactId>
-          <groupId>org.apache.commons</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>logback-core</artifactId>
-          <groupId>ch.qos.logback</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>logback-classic</artifactId>
-          <groupId>ch.qos.logback</groupId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <!-- TODO HACK ALERT: We're coupling pinger here... -->
@@ -341,4 +167,203 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>titan</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+
+      <dependencies>
+        <!-- These 3 are to be included in Hawkular - We're using Titan on Cassandra there -->
+        <dependency>
+          <groupId>org.hawkular.inventory</groupId>
+          <artifactId>hawkular-inventory-impl-tinkerpop-titan-provider</artifactId>
+          <version>${project.version}</version>
+          <scope>runtime</scope>
+          <exclusions>
+            <exclusion>
+              <artifactId>commons-codec</artifactId>
+              <groupId>commons-codec</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>slf4j-api</artifactId>
+              <groupId>org.slf4j</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>slf4j-log4j12</artifactId>
+              <groupId>org.slf4j</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>commons-lang</artifactId>
+              <groupId>commons-lang</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>log4j</artifactId>
+              <groupId>log4j</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>commons-beanutils-core</artifactId>
+              <groupId>commons-beanutils</groupId><!-- provided by commons-beanutils since 1.9.x -->
+            </exclusion>
+          </exclusions>
+        </dependency>
+
+        <dependency>
+          <groupId>com.thinkaurelius.titan</groupId>
+          <artifactId>titan-cassandra</artifactId>
+          <version>${version.com.thinkaurelius.titan}</version>
+          <scope>runtime</scope>
+          <exclusions>
+            <exclusion>
+              <!-- We get a newer version from Cassandra -->
+              <groupId>org.jboss.netty</groupId>
+              <artifactId>netty</artifactId>
+            </exclusion>
+            <exclusion>
+              <!-- we use our own -->
+              <groupId>org.apache.cassandra</groupId>
+              <artifactId>cassandra-all</artifactId>
+            </exclusion>
+            <exclusion>
+              <!-- we use our own -->
+              <groupId>com.google.guava</groupId>
+              <artifactId>guava</artifactId>
+            </exclusion>
+            <exclusion>
+              <!-- TODO HACK ALERT: We're coupling pinger here... -->
+              <!-- We need to depend on another version that is also used in Pinger. This should disappear once pinger
+              becomes a proper remote client of inventory. -->
+              <groupId>org.apache.httpcomponents</groupId>
+              <artifactId>httpclient</artifactId>
+            </exclusion>
+            <exclusion>
+              <artifactId>commons-codec</artifactId>
+              <groupId>commons-codec</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>slf4j-api</artifactId>
+              <groupId>org.slf4j</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>commons-lang</artifactId>
+              <groupId>commons-lang</groupId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+
+        <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <scope>provided</scope><!-- there is a WF module -->
+        </dependency>
+
+        <dependency>
+          <groupId>commons-beanutils</groupId>
+          <artifactId>commons-beanutils</artifactId>
+          <scope>provided</scope><!-- there is a WF module -->
+        </dependency>
+
+        <dependency>
+          <groupId>commons-collections</groupId>
+          <artifactId>commons-collections</artifactId>
+          <scope>provided</scope><!-- there is a WF module -->
+        </dependency>
+
+        <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <scope>provided</scope><!-- there is a WF module -->
+        </dependency>
+
+        <dependency>
+          <groupId>commons-lang</groupId>
+          <artifactId>commons-lang</artifactId>
+          <scope>provided</scope><!-- there is a WF module -->
+        </dependency>
+
+        <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+          <scope>provided</scope><!-- there is a WF module -->
+        </dependency>
+
+        <dependency>
+          <groupId>commons-pool</groupId>
+          <artifactId>commons-pool</artifactId>
+          <scope>provided</scope><!-- there is a WF module -->
+        </dependency>
+
+        <dependency>
+          <groupId>org.apache.cassandra</groupId>
+          <artifactId>cassandra-all</artifactId>
+          <exclusions>
+            <exclusion>
+              <!-- we use our own -->
+              <groupId>com.google.guava</groupId>
+              <artifactId>guava</artifactId>
+            </exclusion>
+
+            <exclusion>
+              <groupId>org.antlr</groupId>
+              <artifactId>antlr</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.antlr</groupId>
+              <artifactId>antlr-runtime</artifactId>
+            </exclusion>
+
+            <!-- loaded via WF module -->
+            <exclusion>
+              <artifactId>commons-cli</artifactId>
+              <groupId>commons-cli</groupId>
+            </exclusion>
+
+            <!-- loaded via WF module -->
+            <exclusion>
+              <artifactId>commons-codec</artifactId>
+              <groupId>commons-codec</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>slf4j-api</artifactId>
+              <groupId>org.slf4j</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>log4j-over-slf4j</artifactId>
+              <groupId>org.slf4j</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>jcl-over-slf4j</artifactId>
+              <groupId>org.slf4j</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>commons-lang3</artifactId>
+              <groupId>org.apache.commons</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>logback-core</artifactId>
+              <groupId>ch.qos.logback</groupId>
+            </exclusion>
+            <exclusion>
+              <artifactId>logback-classic</artifactId>
+              <groupId>ch.qos.logback</groupId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+      </dependencies>
+    </profile>
+
+    <profile>
+      <id>postgres</id>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.hawkular.inventory</groupId>
+          <artifactId>hawkular-inventory-impl-tinkerpop-postgresql-provider</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
