--- a/hawkular-inventory-dist/pom.xml
+++ b/hawkular-inventory-dist/pom.xml
@@ -209,7 +209,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.hawkular.titan</groupId>
+      <groupId>com.thinkaurelius.titan</groupId>
       <artifactId>titan-cassandra</artifactId>
       <version>${version.com.thinkaurelius.titan}</version>
       <scope>runtime</scope>
