--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-titan-provider/pom.xml
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-titan-provider/pom.xml
@@ -56,15 +56,8 @@
 
     <dependency>
       <groupId>com.thinkaurelius.titan</groupId>
-      <artifactId>titan-hadoop</artifactId>
+      <artifactId>titan-es</artifactId>
       <version>${version.com.thinkaurelius.titan}</version>
-      <exclusions>
-        <exclusion>
-          <!-- com.codahale.metrics:* is replaced by io.dropwizard.metrics:* pulled by cassandra-all -->
-          <groupId>com.codahale.metrics</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <dependency>
@@ -93,6 +86,12 @@
     <dependency>
       <groupId>org.apache.cassandra</groupId>
       <artifactId>cassandra-all</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>log4j-over-slf4j</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- Test deps -->
@@ -163,6 +162,7 @@
         <configuration>
           <systemPropertyVariables>
             <graph.config>${project.build.testOutputDirectory}/testsuite-graph.properties</graph.config>
+            <jboss.server.log.dir>${project.build.directory}</jboss.server.log.dir>
           </systemPropertyVariables>
         </configuration>
       </plugin>
