--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/src/test/resources/testsuite-graph.properties
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/src/test/resources/testsuite-graph.properties
@@ -15,8 +15,11 @@
 # limitations under the License.
 #
 
-sql.datasource.class=org.h2.jdbcx.JdbcDataSource
-sql.datasource.url=jdbc:h2:mem:test
+sql.dialect.class=org.umlg.sqlg.sql.dialect.HsqldbDialect
+sql.jdbc.url=jdbc:hsqldb:mem:test
+sql.jdbc.username=SA
+sql.jdbc.password=
+
 #this makes the test extremely slow because the db is flushed to disk after each transaction
 #sql.datasource.url=jdbc:h2:file:./target/h2
 #sql.closeConnectionOnTransactionEnd=true
