Sql provider wrap up. Should work now barring the fact it is in SNAPSHOT for now.

--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/src/test/resources/log4j.properties
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/src/test/resources/log4j.properties
@@ -15,11 +15,14 @@
 # limitations under the License.
 #
 
-sql.dialect.class=org.umlg.sqlg.sql.dialect.HsqldbDialect
-sql.jdbc.url=jdbc:hsqldb:file:${project.build.directory}/db
-sql.jdbc.username=SA
-sql.jdbc.password=
+log4j.rootLogger=INFO, stdout
 
-#this makes the test extremely slow because the db is flushed to disk after each transaction
-#sql.datasource.url=jdbc:h2:file:./target/h2
-#sql.closeConnectionOnTransactionEnd=true
+#debugging for transactional issues
+#log4j.logger.org.umlg.sqlg=debug
+log4j.logger.org.hawkular.inventory.impl.tinkerpop=trace
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
