Update to the latest snapshot of Sqlg, simplify some prop files.

--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/src/test/resources/log4j.properties
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/src/test/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.rootLogger=INFO, stdout
 
 #debugging for transactional issues
 #log4j.logger.org.umlg.sqlg=debug
-log4j.logger.org.hawkular.inventory.impl.tinkerpop=trace
+#log4j.logger.org.hawkular.inventory.impl.tinkerpop=trace
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
