--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/src/test/resources/testsuite-graph.properties
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/src/test/resources/testsuite-graph.properties
@@ -15,11 +15,6 @@
 # limitations under the License.
 #
 
-sql.dialect.class=org.umlg.sqlg.sql.dialect.HsqldbDialect
-sql.jdbc.url=jdbc:hsqldb:file:${project.build.directory}/db
+sql.jdbc.url=jdbc:h2:file:${project.build.directory}/db
 sql.jdbc.username=SA
 sql.jdbc.password=
-
-#this makes the test extremely slow because the db is flushed to disk after each transaction
-#sql.datasource.url=jdbc:h2:file:./target/h2
-#sql.closeConnectionOnTransactionEnd=true
