--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/pom.xml
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-sql-provider/pom.xml
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>org.umlg</groupId>
       <artifactId>sqlg-core</artifactId>
-      <version>1.2.0-SNAPSHOT</version>
+      <version>${version.org.umlg}</version>
     </dependency>
 
     <dependency>
@@ -95,8 +95,8 @@
 
     <dependency>
       <groupId>org.umlg</groupId>
-      <artifactId>sqlg-hsqldb</artifactId>
-      <version>1.2.0-SNAPSHOT</version>
+      <artifactId>sqlg-h2</artifactId>
+      <version>${version.org.umlg}</version>
       <scope>test</scope>
     </dependency>
 
