Added support for rollback.

--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-tinkergraph-provider/src/test/resources/log4j.properties
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-tinkergraph-provider/src/test/resources/log4j.properties
@@ -20,9 +20,10 @@ log4j.rootLogger=INFO, stdout
 #debugging for transactional issues
 #log4j.logger.com.thinkaurelius.titan=debug
 #log4j.logger.org.hawkular.inventory.impl.tinkerpop=trace
+#log4j.logger.org.hawkular.inventory.impl.tinkerpop.provider=trace
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p [%t] %c{2} - %m%n
 
