Add support for periodic saving of the graph and error recovery on start up.

--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-tinkergraph-provider/src/test/resources/log4j.properties
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-tinkergraph-provider/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2015-2016 Red Hat, Inc. and/or its affiliates
+# Copyright 2015-2017 Red Hat, Inc. and/or its affiliates
 # and other contributors as indicated by the @author tags.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -20,7 +20,7 @@ log4j.rootLogger=INFO, stdout
 #debugging for transactional issues
 #log4j.logger.com.thinkaurelius.titan=debug
 #log4j.logger.org.hawkular.inventory.impl.tinkerpop=trace
-#log4j.logger.org.hawkular.inventory.impl.tinkerpop.provider=trace
+log4j.logger.org.hawkular.inventory.impl.tinkerpop.provider=trace
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
