--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-tinkergraph-provider/src/test/resources/testsuite.properties
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-tinkergraph-provider/src/test/resources/testsuite.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2015-2016 Red Hat, Inc. and/or its affiliates
+# Copyright 2015-2017 Red Hat, Inc. and/or its affiliates
 # and other contributors as indicated by the @author tags.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,4 +15,5 @@
 # limitations under the License.
 #
 
-blueprints.tg.directory=${project.build.directory}/__tinker-small-tx.graph
+hawkular.inventory.tinkerpop.data.location=${project.build.directory}/__tinker.graph
+hawkular.inventory.tinkerpop.compactionInterval=1
