--- a/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-tinkergraph-provider/pom.xml
+++ b/hawkular-inventory-impl-tinkerpop-parent/hawkular-inventory-impl-tinkerpop-tinkergraph-provider/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2015-2016 Red Hat, Inc. and/or its affiliates
+    Copyright 2015-2017 Red Hat, Inc. and/or its affiliates
     and other contributors as indicated by the @author tags.
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -132,8 +132,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <systemPropertyVariables>
-            <big-tx.config>${project.build.testOutputDirectory}/testsuite-big-tx.properties</big-tx.config>
-            <small-tx.config>${project.build.testOutputDirectory}/testsuite-small-tx.properties</small-tx.config>
+            <testsuite.config>${project.build.testOutputDirectory}/testsuite.properties</testsuite.config>
           </systemPropertyVariables>
         </configuration>
       </plugin>
